tests/check_contents/check_contents.exp
syntax_error.js
Error ---------------------------------------------------------------------------------------------- syntax_error.js:4:1

Unexpected end of input

   4|
      



Found 1 error
docblock_error.js
Error ------------------------------------------------------------------------------------------- docblock_error.js:1:10

Unexpected `@flow` declaration. Only one per file is allowed. [duplicate-flow-decl]

   1| // @flow @flow
               ^^^^^



Found 1 error
docblock_error_with_syntax_error.js
Error ------------------------------------------------------------------------- docblock_error_with_syntax_error.js:1:10

Unexpected `@flow` declaration. Only one per file is allowed. [duplicate-flow-decl]

   1| // @flow @flow
               ^^^^^


Error -------------------------------------------------------------------------- docblock_error_with_syntax_error.js:4:1

Unexpected end of input

   4|
      



Found 2 errors
docblock_error_with_module_type_conflict.js
Error ----------------------------------------------------------------- docblock_error_with_module_type_conflict.js:1:10

Unexpected `@flow` declaration. Only one per file is allowed. [duplicate-flow-decl]

   1| // @flow @flow
               ^^^^^



Found 1 error
module_type_conflict.js
Error -------------------------------------------------------------------------------------- module_type_conflict.js:5:1

Unable to determine module type (CommonJS vs ES) if both an export statement and `module.exports` are used in the same
module! [module-type-conflict]

   5| module.exports.bar = function (): void {}
      ^^^^^^^^^^^^^^



Found 1 error
syntax_error.js (no filename)
Error ------------------------------------------------------------------------------------------------------------ -:4:1

Unexpected end of input

   4|
      



Found 1 error


not_flow.js

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


not_flow.js with --all

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


not_flow.js with --respect-pragma

File is not @flow!


not_flow.js with --respect-pragma and --all

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number. [unsafe-addition]

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


unsaved_foo.js depends on bar.js which is still checked against foo.js

No errors!


bad_exports.js

Error ---------------------------------------------------------------------------------------------- bad_exports.js:1:31

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   1| export function foo(x: number) { return x; } // Error, missing return type
                                    



Found 1 error
